--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+log = "0.4.22"
+simple_logger = "5.0.0"
+tokio = { version = "1.40.0", features = ["full"] }
+tokio-byteorder = "0.3.0"
